--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,7 +2,7 @@
  * @Author: Ice-Hazymoon 
  * @Date: 2018-06-04 15:41:56 
  * @Last Modified by: Ice-Hazymoon
- * @Last Modified time: 2018-06-05 09:57:38
+ * @Last Modified time: 2018-06-05 10:45:36
  */
 $theme-color: #8c72a7;
 
@@ -27,7 +27,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-image: url('../images/bg.png');
+    background-image: url('../images/bg.jpg');
     width: 100%;
     height: 100%;
     opacity: .4;
